# mesbah

./: .gitignore  CLAUDE.md  README.md  run.sh
backend/: .env.example  CLAUDE.md  requirements-ml.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  db.py  events.py  hardware.py  hf_http.py  models.py  think.py
backend/app/features/architect/: CLAUDE.md  __init__.py  router.py  schemas.py  service.py
backend/app/features/auto_enhance/: CLAUDE.md  __init__.py  manager.py  router.py  schemas.py  service.py
backend/app/features/debug/: CLAUDE.md  router.py  service.py
backend/app/features/inference/: CLAUDE.md  engine.py  router.py  service.py
backend/app/features/models/: CLAUDE.md  router.py  (+1 more)
backend/data/: app_settings.json  misbah.db-shm  misbah.db-wal
backend/scripts/: check_gpu.py  download_model.py  train_qlora.py  train_scratch.py
backend/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothRLOOTrainer.py
docs/: ARCHITECTURE.md  DESKTOP.md  HARDWARE.md  MODEL_SELECTION.md
frontend/: .gitignore  CLAUDE.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.css  styles.scss
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/splash/: index.html
frontend/src-tauri/src/: main.rs
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
(+55 files in other folders)
