[package]
name = "misbah"
version = "0.1.0"
description = "Misbah — LLM Fine-tuning Studio (desktop shell)"
authors = ["Misbah"]
edition = "2021"
rust-version = "1.77"

# The binary that launches the desktop shell.
[[bin]]
name = "misbah"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
